# PkmnLike

./: .gitmodules  CMakeLists.txt  README.md  build.bat  run.bat
Data/: PkmnDefs.xml
Includes/: PokemonDefinition.hpp  PokemonFightHelper.hpp  PokemonMove.hpp  PokemonTypes.hpp
Sources/: PokemonFightHelper.cpp  PokemonTypes.cpp  main.cpp
Tools/PokemonStatsGetter/: CMakeLists.txt  PokemonGetter.cpp  PokemonGetter.hpp  main.cpp
